2006-07-10  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-setjmp.a for now.

2006-06-30  Stepan Kasal  <kasal@ucw.cz>

	* configure.ac: Include common/acinclude.m4 before AM_INIT_AUTOMAKE.
	* Makefile.am (GEN_GCJ_LDADD): Add libunwind libs.

2006-06-16  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Specify static elfutil libraries,
	re-order and add libebl/libebl.a.

2006-06-13  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (EXTRA_DIST): Add EggTrayIcon/ChangeLog and
	org/gnu/gtk/frysk/ChangeLog.

2006-06-09  Nurdin Premji  <npremji@redhat.com>

	* .cvsignore: Ignoring
	compile
	depcomp
	install-sh
	missing

2006-06-06  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Changed linking against .a's to -Ldir -llib.
	Added libdwfl.


2006-05-24  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Added frysk-imports/elfutils/libdw/libdw.a.

2006-05-16  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Add frysk-imports/elfutils/libelf/libelf.a
	Add -lopcodes for linking.

2006-04-27  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: Copy autogen.sh.
	* autogen.sh: Delete.

2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_CLASSPATH): Add jargs.jar.

2006-01-26  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EggTrayIcon_libEggTrayIcon_a_CFLAGS): Delete.
	(AM_CFLAGS): Add $(GTK_CFLAGS) and $(FRYSK_GTK_CFLAGS).

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* configure.ac (AC_CONFIG_FILES): Add tests/Makefile.
	* Makefile.am (SUBDIRS): Add tests/.
	
2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* EggTrayIcon/: Moved to here from ../frysk-imports/.
	* tlwidgets/: Moved to here from ../frysk-imports/.
	* org/: New directory.
	* .cvsignore: New file.
	* configure.ac: New file.
	* Makefile.am: New file.
	* autogen.sh: New file.


Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: