@@ -60,8 +60,7 @@ GEN_GCJ_LDADD += ../frysk-imports/elfutils/libebl/libebl.a
 GEN_GCJ_LDADD += ../frysk-imports/elfutils/libelf/libelf.a
 if USE_LIBUNWIND
 GEN_GCJ_LDADD += ../frysk-imports/libunwind/src/libunwind-ptrace.a \
-		 ../frysk-imports/libunwind/src/libunwind-$(libunwind_cpu).a \
-		 ../frysk-imports/libunwind/src/libunwind.a
+		 ../frysk-imports/libunwind/src/libunwind-$(libunwind_cpu).a
 endif
 GEN_GCJ_LDADD += -lopcodes
 
